# simple-zanzibar

./: .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml
.cursor/memory/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
.cursor/rules/isolation_rules/Core/: command-execution.mdc
.github/workflows/: build.yml  performance.yml
benches/: baseline.rs  concurrent_runtime.rs  org_authorization.rs  perf_optimization.rs  public_api.rs  read_followup_allocations.rs  realworld_authorization.rs  snapshot.rs  snapshot_section_size.rs
benches/common/: phase15_fixtures.rs
docs/: index.md
docs/perf/: history.ndjson  phase-15-complete-benchmark-2026-05-25.md
docs/research/: spike-snapshot-section-size.md  study-spicedb.md
examples/: README.md  collaboration_workspace.rs  file_permissions.rs
specs/: 00-local-engine-prd.md  0001-design.md  10-local-engine-data-model-design.md  11-schema-system-design.md  12-relationship-store-design.md  13-revision-consistency-design.md  14-evaluation-engine-design.md  15-public-api-design.md  16-compact-relationship-store-design.md  17-compact-snapshot-format-design.md  18-trusted-fast-snapshot-load-design.md  19-public-api-completeness-design.md  20-concurrent-engine-runtime-design.md  21-performance-optimization-design.md  22-snapshot-file-size-optimization-design.md  23-read-performance-optimization-design.md  24-zstd-aware-snapshot-load-design.md  25-compiled-computed-userset-shortcut-design.md  26-request-local-memoization-design.md  27-compiled-evaluation-plan-design.md  28-read-path-allocation-reduction-design.md  29-adaptive-bitmap-index-design.md  30-adaptive-delta-compaction-design.md  31-schema-aware-lookup-planner-design.md  32-read-optimization-follow-up-plan.md  60-crates-features-design.md  70-security-design.md  71-performance-budgets-design.md  72-testing-verification-plan.md  80-local-engine-glossary.md  90-local-engine-roadmap.md  91-local-engine-impl-plan.md  93-improvements-review.md  94-production-readiness-review.md  99-key-decisions.md  README.md  index.md  instructions.md
src/: api.rs  domain.rs  error.rs  eval.rs  grammar.pest  lib.rs  model.rs  parser.rs  policy.rs  relationship.rs  revision.rs  runtime.rs  snapshot.rs  store.rs
src/schema/: mod.rs
tests/: compact_snapshot_tests.rs  domain_tests.rs  e2e_prod_readiness_tests.rs  engine_tests.rs  eval_tests.rs  integration_tests.rs  parser_tests.rs  performance_optimization_tests.rs  public_api_completeness_tests.rs  relationship_tests.rs  revision_tests.rs  risk_retirement_tests.rs  schema_tests.rs  snapshot_tests.rs  storage_tests.rs
tests/fixtures/snapshots/: tiny.szsnap.hex
tests/snapshots/: snapshot_tests__error_duplicate_tuple.snap  snapshot_tests__error_namespace_not_found.snap  snapshot_tests__error_parse_error.snap  snapshot_tests__error_relation_not_found.snap  snapshot_tests__expand_exclusion_banned.snap  snapshot_tests__expand_intersection.snap  snapshot_tests__expand_owner_direct.snap  snapshot_tests__expand_viewer_union_hierarchy.snap  snapshot_tests__parse_exclusion_with_nested_union.snap  snapshot_tests__parse_owner_no_rewrite.snap  snapshot_tests__parse_tuple_to_userset.snap  snapshot_tests__parse_viewer_this.snap
tools/: render_perf_impact_chart.py  render_phase_benchmark_trends.py
tools/perfviz/: README.md  pyproject.toml
tools/perfviz/src/perfviz/: __init__.py  __main__.py  cli.py  criterion.py  metadata.py  model.py  render.py  svg.py
tools/perfviz/tests/: test_criterion.py  test_model.py  test_render.py
ui/: package.json
