[package]
name = "simple-zanzibar"
version = "0.2.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
rust-version = "1.95"
license = "MIT"
documentation = "https://docs.rs/simple-zanzibar"
repository = "https://github.com/tyrchen/simple-zanzibar"
homepage = "https://github.com/tyrchen/simple-zanzibar"
description = "A simplified Rust implementation of Google's Zanzibar authorization system with DSL support"
readme = "README.md"
categories = ["development-tools"]
keywords = ["zanzibar", "authorization", "permissions", "rbac", "security"]
exclude = [
  ".cursor/",
  "fixtures/",
  "specs/",
  "_typos.toml",
  "cliff.toml",
  "deny.toml",
  "Makefile",
]

[dependencies]
arc-swap = { version = "1.9.1", default-features = false }
blake3 = "1.8.5"
pest = "2.8.6"
pest_derive = "2.8.6"
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.18"
tracing = { version = "0.1.44", default-features = false, features = ["std"], optional = true }
zstd = { version = "0.13.3", default-features = false }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
tracing = ["dep:tracing"]
bench-internals = []

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
insta = "1"
proptest = "1.11.0"
serde_json = "1.0.150"

[[bench]]
name = "baseline"
harness = false
test = false

[[bench]]
name = "org_authorization"
harness = false
test = false

[[bench]]
name = "snapshot"
harness = false
test = false

[[bench]]
name = "public_api"
harness = false
test = false

[[bench]]
name = "concurrent_runtime"
harness = false
test = false

[[bench]]
name = "realworld_authorization"
harness = false
test = false

[[bench]]
name = "perf_optimization"
harness = false
test = false

[[example]]
name = "file_permissions"
path = "examples/file_permissions.rs"

[[example]]
name = "collaboration_workspace"
path = "examples/collaboration_workspace.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
